Rollout/canary/with-blue-green/service-root.yaml
kind: Service
apiVersion: v1
metadata:
  name: root-with-blue-green-service
spec:
  selector:
    app: canary
    demo: canary-with-blue-green
  ports:
  - protocol: TCP
    port: 80
  type: NodePort
