Rollout/canary/with-blue-green/ingress-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-with-blue-green-ingress
  labels:
    env: dev
    app: A
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-01925fe3fdb467412,subnet-0183b83ada5e17406
    alb.ingress.kubernetes.io/security-groups: sg-05da8f99ad01efcdb
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: root-with-blue-greenservice
                port:
                  name: use-annotation
                  # number: 80
          - path: /canary
            pathType: Prefix
            backend:
              service:
                name: canary-with-blue-greenservice
                port:
                  number: 80
